# Job-Search-CRM

./: .gitignore  README.md  index.html
.github/workflows/: backend-ci.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: health.py  stats.py  vacancies.py
backend/app/core/: config.py
backend/app/db/: base.py  init_db.py  seed.py  session.py
backend/app/models/: vacancy.py
backend/app/schemas/: stats.py  vacancy.py
backend/app/services/: stats_service.py  vacancy_service.py
backend/tests/: conftest.py  test_health.py  test_seed.py  test_stats_api.py  test_vacancies_api.py  test_vacancy_model.py
docs/: local-development.md  seed-data.md
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts  dashboard.ts
frontend/src/components/: StatSummary.tsx  VacancyTable.tsx
frontend/src/lib/: vacancy.ts
